# ai-project

./: .cursorrule  .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  tailwind.config.ts  text.MD
.cursor/rules/: css.mdc  typescript.mdc
agent-project/: package.json
agent-project/components/: chat-container.tsx  collaborators-list.tsx  editor-container.tsx  message-actions.tsx  sidebar.tsx
agent-project/hooks/: use-socket.ts
agent-project/role/: novel-product-manager.md  setting-creator.md  story-creator.md  story-rater.md  (+1 more)
app/: page.tsx
apps/generator/: .cursorrule  .env  example_usage.py  init_project.py  install_dependencies.py  main.py  pyproject.toml  requirements.txt  virtual_world_generator.py
apps/generator/api/: error_handlers.py
apps/generator/core/: generator.py
apps/generator/data/worlds/: worlds_index.json
apps/generator/data/worlds/default_project/: project_index.json
apps/generator/data/worlds/default_project/worlds/: fcb1e592-8679-4520-98a9-698d983ee038.json
apps/generator/middleware/: error_handler.py
apps/generator/utils/: ai_service.py  file_storage.py  logger.py  validators.py
components/: chat-container.tsx  chat-message.tsx  dynamic-icon.tsx  novel-editor.tsx  role-selector.tsx  sidebar.tsx
novel/: worlds_index.json
role/: story-reviewer.md  产品经理.md
services/: api.ts  socket.ts  storage.ts
store/: chat-store.ts  role-store.ts
tale-weaver/: .env  .env.example  .gitignore  README.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml
types/: message.ts  role.ts
(+276 files in other folders)
