[project]
name = "virtual-world-generator"
version = "0.1.0"
description = "A virtual world generator with web interface"
requires-python = ">=3.10.12"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
] 